@@ -463,6 +463,33 @@ Attribute      Description
 width          Width of the col (1-12).
 ============   ===========
 
+Sections
+--------
+Sections can be used to divide a page in logical sections. This is very
+similar to the fieldsets::
+
+        <section label="1. Section">
+          <subsection label="1.1 Subsection">
+            <row>
+              <col></col>
+              <col></col>
+            </row>
+            <subsubsection label="1.1.1 Subsubsection">
+                ...
+            </subsubsection>
+          </subsection>
+        </section>
+
+Every section will genereate a HTML header tag. Formbar supports up to three
+levels of sections.
+
+
+============   ===========
+Attribute      Description
+============   ===========
+label          Label of the fieldset rendered as header.
+============   ===========
+
 Fieldset
 --------
 A fieldset can be used to group fields into a logical unit a fieldset will
@@ -471,7 +498,7 @@ fieldset.  Fieldsets can be nested to model some kind of hierarchy. Formbar
 supports up to three levels. The size of the font in the fieldset legend will
 be reduced a littlebit on every level.::
 
-        
+
         <fieldset label="1. Foo">
         ...
           <fieldset label="1.1 Bar">
